WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270915
[ Ventura WK1 ] 2x imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/track/track-element/track-mode are constant crashes
https://bugs.webkit.org/show_bug.cgi?id=270915
Summary
[ Ventura WK1 ] 2x imported/w3c/web-platform-tests/html/semantics/embedded-co...
Jay Stfleur
Reported
2024-03-13 10:45:28 PDT
Description: imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/track/track-element/track-mode.html imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/track/track-element/track-mode-disabled.html Both tests are constant crashes after being unskipped on
274958@main
History:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fsemantics%2Fembedded-content%2Fmedia-elements%2Ftrack%2Ftrack-element%2Ftrack-mode-disabled.html&test=imported%2Fw3c%2Fweb-platform-tests%2Fhtml%2Fsemantics%2Fembedded-content%2Fmedia-elements%2Ftrack%2Ftrack-element%2Ftrack-mode.html&version_name=Ventura&limit=50000&recent=false
Diff/Image Diff/Crash Log: stderr: 2024-03-13 09:30:23.637 DumpRenderTree[19559:2241795] *** Terminating app due to uncaught exception 'NSRangeException', reason: '*** -[__NSArrayM objectAtIndex:]: index 0 beyond bounds for empty array' *** First throw call stack: ( 0 CoreFoundation 0x00007ff814a7711a __exceptionPreprocess + 242 1 libobjc.A.dylib 0x00007ff81459d0b7 objc_exception_throw + 48 2 CoreFoundation 0x00007ff814b513ba -[__NSCFString characterAtIndex:].cold.1 + 0 3 CoreFoundation 0x00007ff8149a484e -[__NSArrayM objectAtIndex:] + 142 4 AVFCore 0x00007ff8298d73d2 -[AVMediaSelectionOption _updateDisplayNameWithLocale:fallingBackToMatchingUndeterminedAndMultilingual:context:] + 96 5 AVFCore 0x00007ff8298d732a -[AVMediaSelectionOption _displayNameWithLocale:fallingBackToMatchingUndeterminedAndMultilingual:] + 42 6 AVFCore 0x00007ff82981e7e3 -[AVPlayerItem selectMediaOption:inMediaSelectionGroup:] + 156 7 WebCore 0x0000000119ae85c9 _ZN7WebCore34MediaPlayerPrivateAVFoundationObjC19setCurrentTextTrackEPNS_25InbandTextTrackPrivateAVFE + 505 8 WebCore 0x000000011b78dcec _ZN7WebCore30MediaPlayerPrivateAVFoundation21configureInbandTracksEv + 252 9 WebCore 0x0000000119ad6231 _ZN7WebCore34MediaPlayerPrivateAVFoundationObjC25synchronizeTextTrackStateEv + 481 10 WebCore 0x000000011b78dc0a _ZN7WebCore30MediaPlayerPrivateAVFoundation21configureInbandTracksEv + 26 11 WebCore 0x000000011b0f9274 _ZN7WebCore16HTMLMediaElement20textTrackModeChangedERNS_9TextTrackE + 516 12 WebCore 0x000000011b24b799 _ZN3WTF11WeakHashSetIN7WebCore15TextTrackClientENS_18DefaultWeakPtrImplELNS_32EnableWeakPtrThreadingAssertionsE1EE7forEachERKNS_8FunctionIFvRS2_EEE + 265 13 WebCore 0x000000011b2530c0 _ZN7WebCore9TextTrack7setModeENS0_4ModeE + 320 14 WebCore 0x000000011a3b88f0 _ZN7WebCoreL19setJSTextTrack_modeEPN3JSC14JSGlobalObjectExxNS0_12PropertyNameE + 160 15 JavaScriptCore 0x000000010c3d3434 _ZN3JSC8JSObject13putInlineSlowEPNS_14JSGlobalObjectENS_12PropertyNameENS_7JSValueERNS_15PutPropertySlotE + 1124 16 JavaScriptCore 0x000000010c1e3a97 llint_slow_path_put_by_id + 1511 17 JavaScriptCore 0x000000010ca24543 llint_entry + 43571 18 JavaScriptCore 0x000000010ca37b5a llint_entry + 122954 19 JavaScriptCore 0x000000010ca37b5a llint_entry + 122954 20 JavaScriptCore 0x000000010ca199bd vmEntryToJavaScript + 188 21 JavaScriptCore 0x000000010c055839 _ZN3JSC11Interpreter11executeCallEPNS_8JSObjectERKNS_8CallDataENS_7JSValueERKNS_7ArgListE + 585 22 JavaScriptCore 0x000000010c276546 _ZN3JSC12profiledCallEPNS_14JSGlobalObjectENS_15ProfilingReasonENS_7JSValueERKNS_8CallDataES3_RKNS_7ArgListERN3WTF8NakedPtrINS_9ExceptionEEE + 166 23 WebCore 0x000000011aaf36e2 _ZN7WebCore15JSEventListener11handleEventERNS_22ScriptExecutionContextERNS_5EventE + 1586 24 WebCore 0x000000011aedbdb4 _ZN7WebCore11EventTarget25innerInvokeEventListenersERNS_5EventEN3WTF6VectorINS3_6RefPtrINS_23RegisteredEventListenerENS3_12RawPtrTraitsIS6_EENS3_21DefaultRefDerefTraitsIS6_EEEELm1ENS3_15CrashOnOverflowELm2ENS3_10FastMallocEEENS0_16EventInvokePhaseE + 404 25 WebCore 0x000000011aedb89a _ZN7WebCore11EventTarget18fireEventListenersERNS_5EventENS0_16EventInvokePhaseE + 218 26 WebCore 0x000000011aed088b _ZNK7WebCore12EventContext17handleLocalEventsERNS_5EventENS_11EventTarget16EventInvokePhaseE + 539 27 WebCore 0x000000011aed1b92 _ZN7WebCoreL18dispatchEventInDOMERNS_5EventERKNS_9EventPathE + 274 28 WebCore 0x000000011aed14c7 _ZN7WebCore15EventDispatcher13dispatchEventERNS_4NodeERNS_5EventE + 1959 29 WebCore 0x000000011b10b8f3 _ZN7WebCore16HTMLMediaElement13dispatchEventERNS_5EventE + 275 30 WebCore 0x000000011aed48a5 _ZN7WebCore9EventLoop3runENSt3__18optionalIN3WTF15ApproximateTimeEEE + 453 31 WebCore 0x000000011af70812 _ZN7WebCore15WindowEventLoop17didReachTimeToRunEv + 50 32 WebCore 0x000000011b640788 _ZN7WebCore12ThreadTimers24sharedTimerFiredInternalEv + 168 33 WebCore 0x000000011b678e3f _ZN7WebCoreL10timerFiredEP16__CFRunLoopTimerPv + 31 34 CoreFoundation 0x00007ff814a192e8 __CFRUNLOOP_IS_CALLING_OUT_TO_A_TIMER_CALLBACK_FUNCTION__ + 20 35 CoreFoundation 0x00007ff814a18e63 __CFRunLoopDoTimer + 807 36 CoreFoundation 0x00007ff814a18a89 __CFRunLoopDoTimers + 285 37 CoreFoundation 0x00007ff8149fedc9 __CFRunLoopRun + 2206 38 CoreFoundation 0x00007ff8149fdec1 CFRunLoopRunSpecific + 560 39 DumpRenderTree 0x000000010603d969 _ZL7runTestRKNSt3__112basic_stringIcNS_11char_traitsIcEENS_9allocatorIcEEEE + 4489 40 DumpRenderTree 0x000000010603c07b _Z14dumpRenderTreeiPPKc + 4491 41 DumpRenderTree 0x000000010603e642 _Z18DumpRenderTreeMainiPPKc + 482 42 DumpRenderTree 0x000000010609ca99 main + 9 43 dyld 0x00007ff8145ca41f start + 1903 ) libc++abi: terminating due to uncaught exception of type NSException
Attachments
Crash log for both tests
(5.56 KB, application/zip)
2024-03-13 10:48 PDT
,
Jay Stfleur
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-13 10:45:51 PDT
<
rdar://problem/124540415
>
Jay Stfleur
Comment 2
2024-03-13 10:48:10 PDT
Created
attachment 470347
[details]
Crash log for both tests
Eric Carlson
Comment 3
2024-03-18 13:16:32 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26067
EWS
Comment 4
2024-03-18 17:16:03 PDT
Committed
276314@main
(e4bddd14467f): <
https://commits.webkit.org/276314@main
> Reviewed commits have been landed. Closing PR #26067 and removing active labels.
EWS
Comment 5
2024-04-23 09:17:43 PDT
Test gardening commit
277874@main
(a63d417c95a8): <
https://commits.webkit.org/277874@main
> Reviewed commits have been landed. Closing PR #27631 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug