[ Ventura WK1 ] 2x imported/w3c/web-platform-tests/html/semantics/embedded-content/media-elements/track/track-element/track-mode are constant crashes https://bugs.webkit.org/show_bug.cgi?id=270915 rdar://124540415

Reviewed by Jer Noble.

WebKit crashes because an internal method called by
`-[AVPlayerItem selectMediaOption:inMediaSelectionGroup:]` messages a nil NSArray and an
ObjC exception  is thrown. Prevent the crash by putting all calls to
`-[AVPlayerItem selectMediaOption:inMediaSelectionGroup:]` in try/catch blocks.

* Source/WebCore/platform/graphics/avfoundation/MediaSelectionGroupAVFObjC.mm:
(WebCore::MediaSelectionGroupAVFObjC::selectionTimerFired):
* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::processMediaSelectionOptions):
(WebCore::MediaPlayerPrivateAVFoundationObjC::setCurrentTextTrack):

Canonical link: https://commits.webkit.org/276314@main